# bluesky-to-sqlite

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/bluesky_to_sqlite/: cli.py  core.py  service.py
src/bluesky_to_sqlite/service/: auth_file.py  client.py  db.py  parsers.py
tests/service/: test_auth_file.py  test_parsers.py
