[project]
name = "bluesky-to-sqlite"
version = "0.1.0"
description = "Save data from your Bluesky to a SQLite database."
readme = "README.md"
authors = [
    { name = "Myles Braithwaite", email = "myles@myles.garden" }
]
requires-python = ">=3.9"
dependencies = [
    "atproto>=0.0.65",
    "click>=8.1.8",
    "sqlite-utils>=3.38",
]

[project.scripts]
bluesky-to-sqlite = "bluesky_to_sqlite.cli:cli"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
datasette = [
    "datasette>=0.65.2",
]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["F", "I", "RUF022"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
